--- a/static/css/introHCI.css
+++ b/static/css/introHCI.css
@@ -1,24 +1,6 @@
-/* applies to anything of class "example-class-selector" */
-.example-class-selector {
-	margin-top: 2em;
-}
-
-/* applies to any <p> descendants of an element of class "example-class-selector" */
-.example-class-selector p {
-	/* Colors are in hexadecimal: http://www.colorpicker.com/ */	
-	color: #CC00AA;
-}
-
-/* this style exists to make it obvious that you've successfully linked
-   the CSS to the page. feel free to remove it once the link is working. */
-body {
-     border: 1px dotted gray;
-     padding: 20px;
-}
-
 .jumbotron {
-	position: relative;
-	background: none;
+     position: relative;
+     background: none;
 }
 
 .jumbotron:after {
@@ -30,5 +12,27 @@ body {
      bottom: 0;
      right: 0;
      position: absolute;
-     z-index: -1;	
+     z-index: -1;   
 }
+
+/* applies to anything of class "example-class-selector" */
+/*.project {
+	margin-left: 20px;
+     background-color: #deebf7;
+     padding: 20px;
+     width: 525px;
+}*/
+
+/* applies to any <p> descendants of an element of class "example-class-selector" */
+.project p {
+	/* Colors are in hexadecimal: http://www.colorpicker.com/ */	
+	color: #01070C;
+}
+
+/* this style exists to make it obvious that you've successfully linked
+   the CSS to the page. feel free to remove it once the link is working. */
+body {
+     border: 1px dotted gray;
+     padding: 20px;
+}
+
